# winflexbison

./: .appveyor.yml  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  README.txt  UNISTD_ERROR.readme  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  buildClangCl.bat  buildVS2015.bat  buildVS2017.bat  buildVS2019.bat  buildVS2022.bat  changelog.md  cmake_install.cmake  install_manifest.txt  read_me  winflexbison.sln
bison/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  win_bison.sln  win_bison.vcxproj  win_bison.vcxproj.filters  y.vcxproj  y.vcxproj.filters
bison/MinSizeRel/: y.lib
bison/RelWithDebInfo/: y.lib
bison/data/: Makefile.am  README  README.md  bison-default.css  bison.m4  c++-skel.m4  c.m4  glr.c  glr.cc  java-skel.m4  java.m4  lalr1.cc  local.mk  location.cc  yacc.c
bison/data/m4sugar/: foreach.m4
bison/data/skeletons/: bison.m4  c++.m4  c.m4  d-skel.m4  d.m4  glr.c  glr.cc  java-skel.m4  java.m4  lalr1.cc  lalr1.d  lalr1.java  location.cc  stack.hh  variant.hh  yacc.c
bison/data/xslt/: bison.xsl  xml2dot.xsl  xml2text.xsl  xml2xhtml.xsl
bison/lib/: main.c  yyerror.c
bison/src/: AnnotationList.c  AnnotationList.h  InadequacyList.c  InadequacyList.h  LR0.c  LR0.h  Sbitset.c  Sbitset.h  assoc.c  assoc.h  closure.c  closure.h  complain.c  complain.h  config.h  conflicts.c  conflicts.h  counterexample.c  counterexample.h  derivation.c  derivation.h  derives.c  derives.h  files.c  files.h  fixits.c  flex-scanner.h  getargs.c  getargs.h  glyphs.c  glyphs.h  gram.c  gram.h  graphviz.c  graphviz.h  ielr.c  ielr.h  lalr.c  lalr.h  location.c  (+56 more)
bison/src/lib/: abitset.c  bitset.c  bitset.h  bitsetv-print.h  bitsetv.h  ebitset.c  ebitset.h  error.c  get-errno.c  getopt.c  lbitset.c  localcharset.c  mbswidth.c  quotearg.c  stdbool.h  timevar.c  timevar.def  uniwidth.in.h  vbitset.h  width.c  xmalloc.c  xstrndup.c
bison/src/m4/: m4.c  m4.h  m4_input.c  m4_path.c  macro.c
bison/src/m4/lib/: clean-temp.c  clean-temp.h  closein.c  closeout.c  fd-safer.c  fpending.h  gl_anyhash_list1.h  gl_anylinked_list2.h  gl_anytree_oset.h  gl_avltree_oset.h  gl_linkedhash_list.h  gl_list.h  gl_oset.c  gl_xlist.h  gl_xoset.h  malloca.h  mkdtemp.c  mkstemp.c  regex.c  regex.h  regex_internal.c  regexec.c  unistd--.h  xmalloca.h
bison/win_bison.dir/MinSizeRel/: win_bison.exe.recipe
bison/win_bison.dir/MinSizeRel/win_bison.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bison/win_bison.dir/RelWithDebInfo/: win_bison.exe.recipe
bison/win_bison.dir/RelWithDebInfo/win_bison.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bison/y.dir/MinSizeRel/: y.lib.recipe
bison/y.dir/MinSizeRel/y.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
bison/y.dir/RelWithDebInfo/: y.lib.recipe
bison/y.dir/RelWithDebInfo/y.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
common/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  winflexbison_common.sln  winflexbison_common.vcxproj  winflexbison_common.vcxproj.filters
common/MinSizeRel/: winflexbison_common.lib
common/RelWithDebInfo/: winflexbison_common.lib
common/m4/: builtin.c  debug.c  eval.c  format.c  freeze.c  input.c  m4.c  m4.h  m4_builtin.c  m4_debug.c  m4_eval.c  m4_format.c  m4_freeze.c  macro.c  output.c  path.c  symtab.c
common/m4/lib/: asyncsafe-spin.c  asyncsafe-spin.h  c-stack.h  canonicalize.c  clean-temp-private.h  clean-temp-simple.c  clean-temp-simple.h  clean-temp.c  clean-temp.h  cloexec.c  close-stream.c  closein.c  closein.h  closeout.c  closeout.h  execute.c  execute.h  fd-safer.c  findprog-in.c  freadahead.h  gl_anyhash_list2.h  gl_anylinked_list1.h  gl_anylinked_list2.h  gl_anytree_list2.h  gl_anytree_oset.h  gl_anytreehash_list1.h  gl_avltree_ordered.h  gl_avltree_oset.c  gl_avltree_oset.h  gl_linked_list.c  gl_linked_list.h  gl_linkedhash_list.c  gl_linkedhash_list.h  gl_list.c  gl_list.h  gl_oset.c  gl_oset.h  gl_rbtree_oset.c  gl_xlist.c  gl_xlist.h  (+36 more)
common/m4/lib/malloc/: dynarray.h  scratch_buffer.h
common/misc/: abitset.h  alignof.h  app_path.c  argmatch.c  argmatch.h  attribute.h  basename-lgpl.c  basename-lgpl.h  bbitset.h  bitrotate.h  bitset.c  bitset.h  bitset_stats.c  bitset_stats.h  bitsetv-print.c  bitsetv.c  bitsetv.h  c-strcaseeq.h  cjk.h  concat-filename.c  concat-filename.h  config.h  diffseq.h  dirname-lgpl.c  dirname.h  error.c  error.h  exitfail.c  exitfail.h  fopen_unixlike.c  fstrcmp.c  fstrcmp.h  get-errno.h  getdelim.c  gethrxtime.c  gethrxtime.h  getline.c  getopt.c  getopt.h  getopt1.c  (+63 more)
common/misc/bitset/: array.c  array.h  base.h  list.c  list.h  stats.c  stats.h  table.c  table.h  vector.c  vector.h
common/misc/glthread/: tls.c  tls.h
flex/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  fl.vcxproj  fl.vcxproj.filters  win_flex.sln  win_flex.vcxproj  win_flex.vcxproj.filters
flex/MinSizeRel/: fl.lib
flex/RelWithDebInfo/: fl.lib
flex/src/: COPYING  buf.c  filter.c  flexdef.h  flexint.h  gen.c  main.c  misc.c  options.c  options.h  scan.c  scanflags.c  scanopt.c  skel.c  tables.c
flex/src/m4/: builtin.c  debug.c  freeze.c  input.c  m4.c  m4.h  macro.c  xstrdup.c
flex/win_flex.dir/MinSizeRel/: win_flex.exe.recipe
flex/win_flex.dir/RelWithDebInfo/: win_flex.exe.recipe
(+97 files in other folders)
